// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemPolicyCards component should render loading state 1`] = `
<IntlProvider
  locale="en-US"
>
  <SystemPolicyCards
    loading={true}
    policies={
      Array [
        Object {
          "benchmark": Object {
            "version": "0.1.45",
          },
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
        },
        Object {
          "benchmark": Object {
            "version": "0.1.45",
          },
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
        },
      ]
    }
  >
    <Component
      gutter="md"
    >
      <div
        className="pf-l-grid"
        gutter="md"
      >
        <Component
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              policy={
                Object {
                  "benchmark": Object {
                    "version": "0.1.45",
                  },
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                }
              }
            >
              <Component>
                <article
                  className="pf-c-card"
                >
                  <Component>
                    <div
                      className="pf-c-card__body"
                    >
                      <Component
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Component
                            className="margin-bottom-top-none"
                            component="h4"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <Truncate
                                ellipsis="…"
                                lines={1}
                                trimWhitespace={false}
                                width={0}
                              >
                                <span
                                  width={0}
                                >
                                  <span />
                                  <span>
                                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "left": 0,
                                        "position": "fixed",
                                        "top": 0,
                                        "visibility": "hidden",
                                      }
                                    }
                                  >
                                    …
                                  </span>
                                </span>
                              </Truncate>
                            </h4>
                          </Component>
                          <Tooltip
                            appendTo={[Function]}
                            aria="describedby"
                            boundary="window"
                            className=""
                            content={
                              <span>
                                This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                              </span>
                            }
                            distance={15}
                            enableFlip={true}
                            entryDelay={500}
                            exitDelay={500}
                            flipBehavior={
                              Array [
                                "top",
                                "right",
                                "bottom",
                                "left",
                                "top",
                                "right",
                                "bottom",
                              ]
                            }
                            id=""
                            isAppLauncher={false}
                            isContentLeftAligned={false}
                            isVisible={false}
                            maxWidth="18.75rem"
                            position="bottom"
                            tippyProps={Object {}}
                            trigger="mouseenter focus"
                            zIndex={9999}
                          >
                            <PopoverBase
                              appendTo={[Function]}
                              aria="describedby"
                              arrow={true}
                              boundary="window"
                              content={
                                <div
                                  className=""
                                  id=""
                                  role="tooltip"
                                >
                                  <Unknown
                                    isLeftAligned={false}
                                  >
                                    <span>
                                      This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                                    </span>
                                  </Unknown>
                                </div>
                              }
                              delay={
                                Array [
                                  500,
                                  500,
                                ]
                              }
                              distance={15}
                              flip={true}
                              flipBehavior={
                                Array [
                                  "top",
                                  "right",
                                  "bottom",
                                  "left",
                                  "top",
                                  "right",
                                  "bottom",
                                ]
                              }
                              isVisible={false}
                              lazy={true}
                              maxWidth="18.75rem"
                              onCreate={[Function]}
                              placement="bottom"
                              popperOptions={
                                Object {
                                  "modifiers": Object {
                                    "hide": Object {
                                      "enabled": true,
                                    },
                                    "preventOverflow": Object {
                                      "enabled": true,
                                    },
                                  },
                                }
                              }
                              theme="pf-tooltip"
                              trigger="mouseenter focus"
                              zIndex={9999}
                            >
                              <span>
                                External policy 
                                <OutlinedQuestionCircleIcon
                                  className="grey-icon"
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    className="grey-icon"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                                      transform=""
                                    />
                                  </svg>
                                </OutlinedQuestionCircleIcon>
                              </span>
                              <Portal
                                containerInfo={
                                  <div>
                                    <div
                                      class=""
                                      id=""
                                      role="tooltip"
                                    >
                                      <div
                                        class="pf-c-tooltip__content"
                                      >
                                        <span>
                                          This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                }
                              >
                                <div
                                  className=""
                                  id=""
                                  role="tooltip"
                                >
                                  <Component
                                    isLeftAligned={false}
                                  >
                                    <div
                                      className="pf-c-tooltip__content"
                                    >
                                      <span>
                                        This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                                      </span>
                                    </div>
                                  </Component>
                                </div>
                              </Portal>
                            </PopoverBase>
                          </Tooltip>
                        </div>
                      </Component>
                      <div
                        className="margin-bottom-md"
                      >
                        <Tooltip
                          appendTo={[Function]}
                          aria="describedby"
                          boundary="window"
                          className=""
                          content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
                          distance={15}
                          enableFlip={true}
                          entryDelay={500}
                          exitDelay={500}
                          flipBehavior={
                            Array [
                              "top",
                              "right",
                              "bottom",
                              "left",
                              "top",
                              "right",
                              "bottom",
                            ]
                          }
                          id=""
                          isAppLauncher={false}
                          isContentLeftAligned={false}
                          isVisible={false}
                          maxWidth="18.75rem"
                          position="top"
                          tippyProps={Object {}}
                          trigger="mouseenter focus"
                          zIndex={9999}
                        >
                          <PopoverBase
                            appendTo={[Function]}
                            aria="describedby"
                            arrow={true}
                            boundary="window"
                            content={
                              <div
                                className=""
                                id=""
                                role="tooltip"
                              >
                                <Unknown
                                  isLeftAligned={false}
                                >
                                  The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                </Unknown>
                              </div>
                            }
                            delay={
                              Array [
                                500,
                                500,
                              ]
                            }
                            distance={15}
                            flip={true}
                            flipBehavior={
                              Array [
                                "top",
                                "right",
                                "bottom",
                                "left",
                                "top",
                                "right",
                                "bottom",
                              ]
                            }
                            isVisible={false}
                            lazy={true}
                            maxWidth="18.75rem"
                            onCreate={[Function]}
                            placement="top"
                            popperOptions={
                              Object {
                                "modifiers": Object {
                                  "hide": Object {
                                    "enabled": true,
                                  },
                                  "preventOverflow": Object {
                                    "enabled": true,
                                  },
                                },
                              }
                            }
                            theme="pf-tooltip"
                            trigger="mouseenter focus"
                            zIndex={9999}
                          >
                            <div
                              className="ins-c-policy-card ins-m-noncompliant"
                            >
                              <ExclamationCircleIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 512 512"
                                  width="1em"
                                >
                                  <path
                                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                    transform=""
                                  />
                                </svg>
                              </ExclamationCircleIcon>
                               Noncompliant
                            </div>
                            <Component
                              component="small"
                            >
                              <small
                                className=""
                                data-pf-content={true}
                              >
                                30
                                 of 
                                40
                                 rules passed (
                                75%
                                )
                              </small>
                            </Component>
                            <Portal
                              containerInfo={
                                <div>
                                  <div
                                    class=""
                                    id=""
                                    role="tooltip"
                                  >
                                    <div
                                      class="pf-c-tooltip__content"
                                    >
                                      The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                    </div>
                                  </div>
                                </div>
                              }
                            >
                              <div
                                className=""
                                id=""
                                role="tooltip"
                              >
                                <Component
                                  isLeftAligned={false}
                                >
                                  <div
                                    className="pf-c-tooltip__content"
                                  >
                                    The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                  </div>
                                </Component>
                              </div>
                            </Portal>
                          </PopoverBase>
                        </Tooltip>
                      </div>
                      <div
                        className="margin-bottom-md"
                      >
                        <Component
                          className="wrap-break-word"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <p
                            className="wrap-break-word"
                            data-pf-content={true}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            Profile: 
                            <Truncate
                              ellipsis="…"
                              lines={1}
                              trimWhitespace={false}
                              width={0}
                            >
                              <span
                                width={0}
                              >
                                <span />
                                <span>
                                  xccdf_org.ssgproject.content_profile_pci-dss
                                </span>
                                <span
                                  style={
                                    Object {
                                      "left": 0,
                                      "position": "fixed",
                                      "top": 0,
                                      "visibility": "hidden",
                                    }
                                  }
                                >
                                  …
                                </span>
                              </span>
                            </Truncate>
                            <br />
                            SSG version: 
                            0.1.45
                          </p>
                        </Component>
                      </div>
                      <Component
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-pf-content={true}
                        >
                          Last scanned: 
                          <FormattedRelative
                            updateInterval={10000}
                            value={1551853213000}
                          >
                            <span>
                              last year
                            </span>
                          </FormattedRelative>
                        </small>
                      </Component>
                    </div>
                  </Component>
                </article>
              </Component>
            </SystemPolicyCard>
          </div>
        </Component>
        <Component
          key="0"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Component>
              <article
                className="pf-c-card"
              >
                <Component>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </Component>
              </article>
            </Component>
          </div>
        </Component>
        <Component
          key="1"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Component>
              <article
                className="pf-c-card"
              >
                <Component>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </Component>
              </article>
            </Component>
          </div>
        </Component>
        <Component
          key="2"
          span={4}
        >
          <div
            className="pf-l-grid__item pf-m-4-col"
          >
            <Component>
              <article
                className="pf-c-card"
              >
                <Component>
                  <div
                    className="pf-c-card__body"
                  >
                    <Instagram />
                  </div>
                </Component>
              </article>
            </Component>
          </div>
        </Component>
      </div>
    </Component>
  </SystemPolicyCards>
</IntlProvider>
`;

exports[`SystemPolicyCards component should render real table 1`] = `
<IntlProvider
  locale="en-US"
>
  <SystemPolicyCards
    loading={false}
    policies={
      Array [
        Object {
          "benchmark": Object {
            "version": "0.1.45",
          },
          "compliant": false,
          "lastScanned": "2019-03-06T06:20:13Z",
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
          "rulesFailed": 10,
          "rulesPassed": 30,
          "score": 75,
        },
        Object {
          "benchmark": Object {
            "version": "0.1.45",
          },
          "compliant": false,
          "lastScanned": null,
          "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7 2",
          "refId": "xccdf_org.ssgproject.content_profile_pci-dss2",
          "rulesFailed": 0,
          "rulesPassed": 0,
          "score": 0,
        },
      ]
    }
  >
    <Component
      gutter="md"
    >
      <div
        className="pf-l-grid"
        gutter="md"
      >
        <Component
          key="0"
          lg={6}
          md={12}
          sm={12}
          xl={4}
        >
          <div
            className="pf-l-grid__item pf-m-12-col-on-sm pf-m-12-col-on-md pf-m-6-col-on-lg pf-m-4-col-on-xl"
          >
            <SystemPolicyCard
              policy={
                Object {
                  "benchmark": Object {
                    "version": "0.1.45",
                  },
                  "compliant": false,
                  "lastScanned": "2019-03-06T06:20:13Z",
                  "name": "PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7",
                  "refId": "xccdf_org.ssgproject.content_profile_pci-dss",
                  "rulesFailed": 10,
                  "rulesPassed": 30,
                  "score": 75,
                }
              }
            >
              <Component>
                <article
                  className="pf-c-card"
                >
                  <Component>
                    <div
                      className="pf-c-card__body"
                    >
                      <Component
                        className="margin-bottom-md"
                      >
                        <div
                          className="pf-c-content margin-bottom-md"
                        >
                          <Component
                            className="margin-bottom-top-none"
                            component="h4"
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            <h4
                              className="margin-bottom-top-none"
                              data-pf-content={true}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <Truncate
                                ellipsis="…"
                                lines={1}
                                trimWhitespace={false}
                                width={0}
                              >
                                <span
                                  width={0}
                                >
                                  <span />
                                  <span>
                                    PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "left": 0,
                                        "position": "fixed",
                                        "top": 0,
                                        "visibility": "hidden",
                                      }
                                    }
                                  >
                                    …
                                  </span>
                                </span>
                              </Truncate>
                            </h4>
                          </Component>
                          <Tooltip
                            appendTo={[Function]}
                            aria="describedby"
                            boundary="window"
                            className=""
                            content={
                              <span>
                                This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                              </span>
                            }
                            distance={15}
                            enableFlip={true}
                            entryDelay={500}
                            exitDelay={500}
                            flipBehavior={
                              Array [
                                "top",
                                "right",
                                "bottom",
                                "left",
                                "top",
                                "right",
                                "bottom",
                              ]
                            }
                            id=""
                            isAppLauncher={false}
                            isContentLeftAligned={false}
                            isVisible={false}
                            maxWidth="18.75rem"
                            position="bottom"
                            tippyProps={Object {}}
                            trigger="mouseenter focus"
                            zIndex={9999}
                          >
                            <PopoverBase
                              appendTo={[Function]}
                              aria="describedby"
                              arrow={true}
                              boundary="window"
                              content={
                                <div
                                  className=""
                                  id=""
                                  role="tooltip"
                                >
                                  <Unknown
                                    isLeftAligned={false}
                                  >
                                    <span>
                                      This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                                    </span>
                                  </Unknown>
                                </div>
                              }
                              delay={
                                Array [
                                  500,
                                  500,
                                ]
                              }
                              distance={15}
                              flip={true}
                              flipBehavior={
                                Array [
                                  "top",
                                  "right",
                                  "bottom",
                                  "left",
                                  "top",
                                  "right",
                                  "bottom",
                                ]
                              }
                              isVisible={false}
                              lazy={true}
                              maxWidth="18.75rem"
                              onCreate={[Function]}
                              placement="bottom"
                              popperOptions={
                                Object {
                                  "modifiers": Object {
                                    "hide": Object {
                                      "enabled": true,
                                    },
                                    "preventOverflow": Object {
                                      "enabled": true,
                                    },
                                  },
                                }
                              }
                              theme="pf-tooltip"
                              trigger="mouseenter focus"
                              zIndex={9999}
                            >
                              <span>
                                External policy 
                                <OutlinedQuestionCircleIcon
                                  className="grey-icon"
                                  color="currentColor"
                                  noVerticalAlign={false}
                                  size="sm"
                                >
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    className="grey-icon"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    style={
                                      Object {
                                        "verticalAlign": "-0.125em",
                                      }
                                    }
                                    viewBox="0 0 512 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
                                      transform=""
                                    />
                                  </svg>
                                </OutlinedQuestionCircleIcon>
                              </span>
                              <Portal
                                containerInfo={
                                  <div>
                                    <div
                                      class=""
                                      id=""
                                      role="tooltip"
                                    >
                                      <div
                                        class="pf-c-tooltip__content"
                                      >
                                        <span>
                                          This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                }
                              >
                                <div
                                  className=""
                                  id=""
                                  role="tooltip"
                                >
                                  <Component
                                    isLeftAligned={false}
                                  >
                                    <div
                                      className="pf-c-tooltip__content"
                                    >
                                      <span>
                                        This policy report was uploaded into the Compliance application. If you would like to manage your policy inside the Compliance application, use the "Create a policy" wizard to create one and associate systems.
                                      </span>
                                    </div>
                                  </Component>
                                </div>
                              </Portal>
                            </PopoverBase>
                          </Tooltip>
                        </div>
                      </Component>
                      <div
                        className="margin-bottom-md"
                      >
                        <Tooltip
                          appendTo={[Function]}
                          aria="describedby"
                          boundary="window"
                          className=""
                          content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
                          distance={15}
                          enableFlip={true}
                          entryDelay={500}
                          exitDelay={500}
                          flipBehavior={
                            Array [
                              "top",
                              "right",
                              "bottom",
                              "left",
                              "top",
                              "right",
                              "bottom",
                            ]
                          }
                          id=""
                          isAppLauncher={false}
                          isContentLeftAligned={false}
                          isVisible={false}
                          maxWidth="18.75rem"
                          position="top"
                          tippyProps={Object {}}
                          trigger="mouseenter focus"
                          zIndex={9999}
                        >
                          <PopoverBase
                            appendTo={[Function]}
                            aria="describedby"
                            arrow={true}
                            boundary="window"
                            content={
                              <div
                                className=""
                                id=""
                                role="tooltip"
                              >
                                <Unknown
                                  isLeftAligned={false}
                                >
                                  The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                </Unknown>
                              </div>
                            }
                            delay={
                              Array [
                                500,
                                500,
                              ]
                            }
                            distance={15}
                            flip={true}
                            flipBehavior={
                              Array [
                                "top",
                                "right",
                                "bottom",
                                "left",
                                "top",
                                "right",
                                "bottom",
                              ]
                            }
                            isVisible={false}
                            lazy={true}
                            maxWidth="18.75rem"
                            onCreate={[Function]}
                            placement="top"
                            popperOptions={
                              Object {
                                "modifiers": Object {
                                  "hide": Object {
                                    "enabled": true,
                                  },
                                  "preventOverflow": Object {
                                    "enabled": true,
                                  },
                                },
                              }
                            }
                            theme="pf-tooltip"
                            trigger="mouseenter focus"
                            zIndex={9999}
                          >
                            <div
                              className="ins-c-policy-card ins-m-noncompliant"
                            >
                              <ExclamationCircleIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                              >
                                <svg
                                  aria-hidden={true}
                                  aria-labelledby={null}
                                  fill="currentColor"
                                  height="1em"
                                  role="img"
                                  style={
                                    Object {
                                      "verticalAlign": "-0.125em",
                                    }
                                  }
                                  viewBox="0 0 512 512"
                                  width="1em"
                                >
                                  <path
                                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                    transform=""
                                  />
                                </svg>
                              </ExclamationCircleIcon>
                               Noncompliant
                            </div>
                            <Component
                              component="small"
                            >
                              <small
                                className=""
                                data-pf-content={true}
                              >
                                30
                                 of 
                                40
                                 rules passed (
                                75%
                                )
                              </small>
                            </Component>
                            <Portal
                              containerInfo={
                                <div>
                                  <div
                                    class=""
                                    id=""
                                    role="tooltip"
                                  >
                                    <div
                                      class="pf-c-tooltip__content"
                                    >
                                      The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                    </div>
                                  </div>
                                </div>
                              }
                            >
                              <div
                                className=""
                                id=""
                                role="tooltip"
                              >
                                <Component
                                  isLeftAligned={false}
                                >
                                  <div
                                    className="pf-c-tooltip__content"
                                  >
                                    The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
                                  </div>
                                </Component>
                              </div>
                            </Portal>
                          </PopoverBase>
                        </Tooltip>
                      </div>
                      <div
                        className="margin-bottom-md"
                      >
                        <Component
                          className="wrap-break-word"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <p
                            className="wrap-break-word"
                            data-pf-content={true}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                          >
                            Profile: 
                            <Truncate
                              ellipsis="…"
                              lines={1}
                              trimWhitespace={false}
                              width={0}
                            >
                              <span
                                width={0}
                              >
                                <span />
                                <span>
                                  xccdf_org.ssgproject.content_profile_pci-dss
                                </span>
                                <span
                                  style={
                                    Object {
                                      "left": 0,
                                      "position": "fixed",
                                      "top": 0,
                                      "visibility": "hidden",
                                    }
                                  }
                                >
                                  …
                                </span>
                              </span>
                            </Truncate>
                            <br />
                            SSG version: 
                            0.1.45
                          </p>
                        </Component>
                      </div>
                      <Component
                        className="margin-bottom-none"
                        component="small"
                      >
                        <small
                          className="margin-bottom-none"
                          data-pf-content={true}
                        >
                          Last scanned: 
                          <FormattedRelative
                            updateInterval={10000}
                            value={1551853213000}
                          >
                            <span>
                              last year
                            </span>
                          </FormattedRelative>
                        </small>
                      </Component>
                    </div>
                  </Component>
                </article>
              </Component>
            </SystemPolicyCard>
          </div>
        </Component>
      </div>
    </Component>
  </SystemPolicyCards>
</IntlProvider>
`;
